--- a/ramal.ipynb
+++ b/ramal.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "j1dhp5wowV9Z"
       ],
-      "authorship_tag": "ABX9TyOZjVTh0/n/m7iGGnF/37BG",
+      "authorship_tag": "ABX9TyOW9M/gSHFJn0Ycf5tOJtZm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,65 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/sufyanAshraf/personal/blob/main/ramal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Info"
+      ],
+      "metadata": {
+        "id": "e-H5ZB6L6SuR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First write that person name then binte then mothers name then address then say dua 7 times in a single breath it will connect you with that person then ask for 4 numbers b/w 1-16 or 1-96 (if use 1-96 divide them by 16) if the person is not available then use dot method. in the middle you have to write \"Aalimul kabir\""
+      ],
+      "metadata": {
+        "id": "FKQo3xb01pWu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dot method: say dua & write dots randomly. then combine the dots it the last dot combine with previous dot then it is line else it is dot.\n",
+        "Do it for each value.\n",
+        "e.g\n",
+        "*   .......=> .\n",
+        "*   ......=> _\n",
+        "\n",
+        "rules\n",
+        "*   SAK =>1                     best (sad akbar kharij)\n",
+        "*   SAD =>12, 14, 10            Good (sad akbar Dakhil)\n",
+        "*   SAD =>3, 5, 11, 13, 15, 16  strongly against (munqalib sabit)\n",
+        "*   SAD =>2, 4, 6, 8            no comment (munqalib)\n",
+        "*   SAD => 7, 9                 manhoos (nahis akbar)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oS907pdp2jxL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5f842b51"
+      },
+      "source": [
+        "too see the image uncomment it\n",
+        "<!-- ![Alt text for image](https://raw.githubusercontent.com/sufyanAshraf/personal/refs/heads/main/IMG_20240926_180052.jpg \"Optional title for image\") -->\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# code"
+      ],
+      "metadata": {
+        "id": "tP4tQt-k6YlQ"
+      }
     },
     {
       "cell_type": "code",
