--- a/ramal.ipynb
+++ b/ramal.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "j1dhp5wowV9Z"
       ],
-      "authorship_tag": "ABX9TyOW9M/gSHFJn0Ycf5tOJtZm",
+      "authorship_tag": "ABX9TyMG83Lym4aqKpoK0td0E9RI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "*   SAD =>2, 4, 6, 8            no comment (munqalib)\n",
         "*   SAD => 7, 9                 manhoos (nahis akbar)\n",
         "\n",
-        "\n"
+        "close chart all lines in 15 figure/House (can also represent magic)\n"
       ],
       "metadata": {
         "id": "oS907pdp2jxL"
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "GsUuFMFUUpp_"
       },
@@ -280,7 +280,7 @@
         "id": "6URk6tIuUvZN",
         "outputId": "ba782df4-15e0-4356-9caa-48b89ca11a35"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
